# Local_Agent_V2_Streamlit

./: .gitignore  README.md  package.json
backend/: README.md  pyproject.toml
backend/app/: main.py  open_webui_bridge.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  agents.py  automations.py  config.py  databases.py
backend/app/core/: agent_executor.py  agent_templates.py  automation_engine.py  database_routing.py  db_connectors.py  langgraph_agent.py  llm_client.py  models.py  multi_agent_manager.py  settings.py  storage.py  web_navigation_agent.py  webhook_dispatcher.py
docs/: LOCAL_AGENT_V2_STREAMLIT_COMPLETE_DOCUMENTATION.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: AgentsTab.tsx  ConfigurationTab.tsx  PlaygroundTab.tsx
scripts/: dev-backend.sh  dev-webhook-bridge.sh  setup.sh  start-all.sh
vscode_simple_runner/: README.md  config_page.py  run_vscode_agent_app.py  streamlit_app.py
