[project]
name = "local-agent-backend"
version = "0.1.0"
description = "FastAPI + LangGraph backend for configurable local AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "langgraph>=0.4.0",
  "requests>=2.32.0",
  "playwright>=1.48.0",
  "openpyxl>=3.1.0",
  "python-docx>=1.1.2",
  "clickhouse-connect>=0.8.0",
  "oracledb>=3.0.0"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app"]
